Fix scoreboard